# dn_video_player

app/: CMakeLists.txt  CMakeLists1.txt  build.gradle  ffmpeg_study.txt
app/src/androidTest/java/com/people/health/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  JavaCallHelper.cpp  JavaCallHelper.h  PeopleFFmpeg.cpp  PeopleFFmpeg.h  Utils.h  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/people/health/player/: MainActivity.java  PeoplePlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/people/health/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
